# gudhi-devel

./: CMakeLists.txt
src/: CMakeLists.txt
src/Dowker_complex/concept/: SimplicialComplexForDowker.h
src/Dowker_complex/example/: CMakeLists.txt  example_dowker_complex_off.cpp  example_dowker_complex_sphere.cpp  example_nearest_landmark_table.cpp
src/Dowker_complex/include/gudhi/: Dowker_complex.h  Euclidean_dowker_complex.h
src/Dowker_complex/include/gudhi/Active_witness_dowker/: Active_witness_dowker.h  Active_witness_dowker_iterator.h
src/Dowker_complex/include/gudhi/Dowker_complex/: .all_faces_in.h.swp  all_faces_in.h
src/Dowker_complex/test/: CMakeCache.txt  CMakeLists.txt  test_euclidean_simple_dowker_complex.cpp  test_simple_dowker_complex.cpp
src/Dowker_complex/utilities/: CMakeLists.txt  dowker_persistence.cpp  dowkercomplex.md
src/Witness_complex/include/gudhi/: Witness_complexStrong
src/Witness_complex/test/: test_simple_dowker_complex.cpp
src/python/: CMakeLists.txt
src/python/gudhi/: dowker_complex.pyx
src/python/include/: Dowker_complex_interface.h
